--- a/Blockchain/Views/Loan/ShowLoans.cshtml
+++ b/Blockchain/Views/Loan/ShowLoans.cshtml
@@ -48,7 +48,8 @@
                             permit = "Rejected";
                         } else
                         {
-                            permit = "Accepted";
+                    style = "";
+                    permit = "Accepted";
                         }
                 <td class="col">@permit</td>
                 <td class="col">
